Add first iteration of portfolio

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -8,10 +8,47 @@
   </head>
   <body>
     <div id="content">
-      <h1>My Portfolio</h1>
-      <p>This is my portfolio.</p>
-      <p>Click here to get a random message:</p>
-      <button onclick="addRandomGreeting()">Hello</button>
+      <h1>Rebecca He's Portfolio</h1>
+
+      <h3>Work</h3>
+
+      <p>Hello! My name is Rebecca and I'm a software engineer at Google in Boston. I've been here for two and a half years and
+          I'm starting to feel confident as a software engineer, but it definitely took me some time. I had imposter syndrome for
+          quite a while (and still have it, to some extent). Here's <a href="https://medium.com/@acceber95/its-time-to-conquer-imposter-syndrome-ef99bf83d26">
+          a blog post I wrote during my junior year internship on imposter syndrome</a>. Warning: there are dorky Harry Potter references.
+
+      <p>Anyways, more about what I do - I work on a product called Firebase App Distribution. I mostly do backend, writing code in
+          Java. My team is really collaborative and supportive, and we do a lot of pair programming. We also like to have fun.
+          For Halloween, we dressed up as handmaids from the Handmaid's Tale.
+      <img src="/images/halloween.jpg"/>
+
+      <p>When I'm not coding, I'm leading a Women in Firebase Book Club, mentoring awesome students through this amazing program called
+          SPS, and planning cultural events for the Asian Googler Network.</p>
+      <img src="/images/agn_lny.jpg"/>
+
+      <h3>Hobbies</h3>
+
+      <p>Outside of work, I have a few different hobbies. First, I like music. I played piano when I was a kid, and I've been
+          trying to keep it up. I also like to sing and am always down for a jam sesh.</p>
+      <img src="/images/piano.jpg"/>
+
+      <p>I also really like nature. Sometimes I just need to get out of the house and on top of a mountain. It makes me
+          feel zen. I also apparently like taking weird pictures when I go hiking.</p>
+      <img src="/images/hiking_weird.jpg"/>
+
+      <p>I recently got into weight lifting and running. For running, I used to <strong>hate</strong> it. So much. But
+          ever since the fall of 2018, when I ran my first 5K, I've been more open to it. I'm planning to run my first half
+          marathon in May. Wish me luck!</p>
+      <img src="/images/running.jpg"/>
+
+      <h3>Personal</h3>
+
+      <p>My parents immigrated to the United States before I was born. I have a younger brother who is in college. My grandma
+          lives with my family in Maryland (where I'm from).</p>
+      <img src="/images/family.jpg"/>
+
+      <h3>Michael Scott Quote of the Day</h3>
+      <button onclick="addRandomGreeting()">Generate Quote</button>
       <div id="greeting-container"></div>
     </div>
   </body>
