--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -50,6 +50,13 @@
 
       <h3>Comments</h3>
 
+      <form action="/comments" method="POST">
+        <p>Add a comment</p>
+        <textarea name="comment-input"></textarea>
+        <br/><br/>
+        <input type="submit" />
+      </form>
+
       <ul id="comments-list"></ul>
     </div>
   </body>
